force-app/main/default/objects/Amount__mdt/Amount__mdt.object-meta.xml
<CustomObject>
    <label>Amount</label>
    <pluralLabel>Amounts</pluralLabel>
</CustomObject>