force-app/main/default/objects/Amount__mdt/fields/Handicap__c.field-meta.xml
<CustomField>
    <fullName>Handicap__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if you are disabled</inlineHelpText>
    <label>Handicap</label>
    <type>Checkbox</type>
</CustomField>