force-app/main/default/objects/Amount__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Enter your name</inlineHelpText>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>