force-app/main/default/objects/Amount__mdt/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <inlineHelpText>ENter your phone number without country code</inlineHelpText>
    <label>Phone number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>